Implement timeouts when blocking the calling process with tsleep.

Fixes PR kern/33452